--- a/config/storj-bridge/config.json
+++ b/config/storj-bridge/config.json
@@ -31,8 +31,8 @@
     "port": 587,
     "secure": false,
     "auth": {
-      "user": "digipulse",
-      "pass": "Wb4poRUtHEeretsqeVDqAnzf"
+      "user": "",
+      "pass": ""
     },
     "from": "alpha@digipulse.io"
   },
